@startuml

title __UTIL's Class Diagram__\n

  namespace org.orgname.app {
    namespace util {
      abstract class org.orgname.app.util.BaseForm {
          {static} - baseApplicationTitle : String
          + BaseForm()
          {static} + getBaseApplicationTitle()
          {abstract} + getFormHeight()
          {abstract} + getFormWidth()
          {static} + setBaseApplicationTitle()
      }
    }
  }
  

  namespace org.orgname.app {
    namespace util {
      abstract class org.orgname.app.util.BaseSubForm {
          + BaseSubForm()
          + closeSubForm()
      }
    }
  }
  

  namespace org.orgname.app {
    namespace util {
      class org.orgname.app.util.CustomTableModel {
          - cls : Class<T>
          - columnNames : String[]
          - values : List<T>
          + CustomTableModel()
          + getColumnClass()
          + getColumnCount()
          + getColumnName()
          + getRowCount()
          + getValueAt()
          + getValues()
      }
    }
  }
  

  namespace org.orgname.app {
    namespace util {
      class org.orgname.app.util.DialogUtil {
          {static} + showConfirm()
          {static} + showConfirm()
          {static} + showError()
          {static} + showError()
          {static} + showInfo()
          {static} + showInfo()
          {static} + showWarn()
          {static} + showWarn()
      }
    }
  }
  

  namespace org.orgname.app {
    namespace util {
      class org.orgname.app.util.MysqlDatabase {
          - address : String
          - db : String
          - pass : String
          - port : int
          - source : MysqlDataSource
          - user : String
          + MysqlDatabase()
          + MysqlDatabase()
          + getConnection()
      }
    }
  }
  

  namespace org.orgname.app {
    namespace util {
      abstract class org.orgname.app.util.ObjectTableModel {
          + addRowEntities()
          + addRowEntity()
          + getRowEntity()
          + isCellEditable()
          + setRowEntity()
          {abstract} # getEntityFromRowData()
          {abstract} # getRowDataFromEntity()
          - getRowData()
          - setRowData()
      }
    }
  }
  

  org.orgname.app.util.BaseForm -up-|> javax.swing.JFrame
  org.orgname.app.util.BaseSubForm -up-|> org.orgname.app.util.BaseForm
  org.orgname.app.util.BaseSubForm o-- T : mainForm
  org.orgname.app.util.CustomTableModel -up-|> javax.swing.table.AbstractTableModel
  org.orgname.app.util.ObjectTableModel -up-|> javax.swing.table.DefaultTableModel


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
